# raw-web-search

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  progress.md  publication_todo.md  pyproject.toml  server.json
plan/plan-publication/: handoff.md  plan.md
plan/plan-publication/phases/: phase-1.md  phase-2.md  phase-3.md  phase-4.md
research/: analyze_bm25_scores.py  analyze_eval.py  baseline_comparison.md  baseline_eval.py  baseline_our_tool.json  benchmark_corpus.json  benchmark_embeddings.py  benchmark_fetch.py  benchmark_results.json  conversation-context.md  eval_a_factual.md  eval_a_v2.md  latency_diagnosis.py  quality_eval.md
src/open_search_mcp/: __init__.py  chunker.py  extractor.py  server.py
tests/: test_server.py
