[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-search-mcp"
version = "0.1.0"
description = "Open source MCP search server: SearXNG + trafilatura + BM25"
requires-python = ">=3.10"
authors = [
    {name = "Open Search Contributors"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "trafilatura>=2.0.0",
    "rank-bm25>=0.2.2",
    "fastembed>=0.4.0",
    "numpy>=1.24.0",
    "playwright>=1.40.0",
]

[project.scripts]
open-search-mcp = "open_search_mcp.server:main"
open-search-mcp-setup = "open_search_mcp.server:setup"

[tool.setuptools]
packages = ["open_search_mcp"]
package-dir = {"" = "src"}

[project.urls]
Homepage = "https://github.com/andresfortunato/raw-web-search"
Repository = "https://github.com/andresfortunato/raw-web-search"

[tool.pytest.ini_options]
asyncio_mode = "auto"
